app/delivery/rollout.yaml
# @see https://fidelissauro.dev/argo-rollouts-qual-a-forma-mais-simples-de-executar-canary-releases-e-blue-green-deployments-no/
# kubectl argo rollouts get rollout blog-rollout
# kubectl argo rollouts promote blog-rollout
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blog-rollout
  labels:
    app: blog
spec:
  strategy:
    blueGreen:
      activeService: blog-active
      previewService: blog-preview
      previewReplicaCount: 2
      scaleDownDelayRevisionLimit: 1
      autoPromotionEnabled: false
  replicas: 5
  revisionHistoryLimit: 2
  minReadySeconds: 30
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      imagePullSecrets:
        - name: vultr-cr-credentials
      containers:
        - name: app-blog
          image: blog-image
          ports:
            - containerPort: 8000
          imagePullPolicy: IfNotPresent
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 128Mi
          #   limits:
          #     cpu: 1
          #     memory: 256Mi
