app/delivery/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-preview
  labels:
    app: blog
spec:
  selector:
    app: blog
  ports:
    - name: entrypoint
      port: 8000
      targetPort: 8000
      protocol: TCP
